--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,10 @@ body {
 
 h1 {
   margin: 0;
-  font-size: 48px;
+  font-size: 4rem;
+}
+.text-secondary {
+  color: #1194ff;
 }
 
 h2 {
@@ -21,6 +24,7 @@ h3 {
   font-size: 18px;
 }
 
+/* Header */
 .main-cover {
   background-color: transparent;
   background-size: cover;
@@ -100,4 +104,75 @@ h3 {
 
 .icon-link {
   position: relative;
+}
+
+/* Skills */
+#skills {
+  padding: 128px 0;
+  clear: both;
+}
+
+.heading {
+  margin-bottom: 32px;
+  text-align: center;
+}
+
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+/* Contact */
+#contact {
+  padding: 128px 0;
+  clear: both;
+}
+
+.contact {
+  background: #4d4d4d;
+}
+
+.contact-contents {
+  color: white;
+  text-align: center;
+}
+
+.contact-contents h2 {
+  font-size: 3rem;
+  font-family: "Permanent Marker";
+}
+.contact-contents h2 > span {
+  color: #1194ff;
+}
+
+.description {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.contact-mail {
+  /* width: 450px; */
+  font-size: 2rem;
+  border: 3px solid #fff;
+  border-radius: 20px;
+  padding: 1.5rem 2.5rem;
+  transition: all 0.4s ease-out;
+}
+.contact-mail span {
+  color: #1194ff;
+}
+
+.contact-mail:hover {
+	padding: 0.5rem 1.5rem;
+	background: #ff594f;
+	color: #000;
+}
+.contact-mail:hover span {
+	color: #000;
+}
+
+.contact a {
+  text-decoration: none;
+  color: #fff;
 }
